added video background

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,16 @@ html {
 body {
   @apply h-full;
 }
+
+.player-wrapper {
+  width: auto;
+  height: auto;
+}
+.react-player {
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.react-player > div {
+  position: absolute;
+}
