--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,14 +12,46 @@ body {
 }
 
 .player-wrapper {
-  width: auto;
-  height: auto;
-}
-.react-player {
-  padding-top: 56.25%;
-  position: relative;
+  @apply relative;
+  @apply pt-[56.25%];
 }
 
-.react-player > div {
+.react-player {
+  @apply absolute;
+  @apply top-0;
+  @apply left-0;
+  @apply object-cover;
+}
+.react-player > iframe {
   position: absolute;
+  object-fit: fill;
+}
+
+.video-background {
+  position: relative;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+
+.video-background iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100vw;
+  height: 100vh;
+  transform: translate(-50%, -50%);
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .video-background iframe {
+    /* height = 100 * (9 / 16) = 56.25 */
+    height: 56.25vw;
+  }
+}
+@media (max-aspect-ratio: 16/9) {
+  .video-background iframe {
+    /* width = 100 / (9 / 16) = 177.777777 */
+    width: 177.78vh;
+  }
 }
